@@ -7,6 +7,7 @@
 	* Released version 2.1.5
 	* Added new markers (date and size) to the output
 	* Added "Last-modified" header generation while indexing (only if not set already)
+	* Added tt_news hook to set page modification date correctly
 
 2008-12-09  Dmitry Dulepov  <dmitry@typo3.org>
 
